--- a/Course1/Project1/styles.css
+++ b/Course1/Project1/styles.css
@@ -96,3 +96,12 @@ a:-webkit-any-link {
     font-size: 1.17em;
     font-weight: bold;
 }
+
+.img{
+    width: 100%;
+    height: auto;
+    max-width: 625px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
